edit rapor deskripsi

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,7 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+	Options +FollowSymLinks
     RewriteEngine On
 
     # Handle Authorization Header
@@ -14,7 +15,7 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
-    # Handle Front Controller...
+    # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
