--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2|7.4",
+        "php": "^7.2|^7.4",
         "ext-gd": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
